# mdformat-footnote

./: pyproject.toml  tox.ini
mdformat_footnote/: plugin.py
tests/: test_fixtures.py
