[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mdformat-footnote"
version = "0.1.0"
description = ""
documentation = "README.md"
keywords = ["mdformat","markdown","markdown-it"]
authors = ["Thomas Cuthbert <thomas.cuthbert@canonical.com>"]
homepage = "https://github.com/executablebooks/mdformat-footnote"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
        { include = "mdformat_footnote" }
]
exclude = [".git", "tests"]

[tool.poetry.plugins."mdformat.parser_extension"]
"footnote" = "mdformat_footnote"

[tool.poetry.dependencies]
python =  ">=3.7,<4.0"
mdformat = ">=0.7.0,<0.8.0"
mdit-py-plugins = "^0.2.8"
pytest = "~=6.0"
coverage = "*"
pytest-cov = "*"
pre-commit = "*"

[tool.poetry.extras]

test = [
    "pytest",
    "pytest",
    "pytest-cov",
]

dev = ["pre-commit"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_footnote", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
xfail_strict = true
